# ParaCL-Interpreter

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
src/interpreter/: interpreter.cppm
src/nametable/: nametable.cppm
